setup api url and integration with `TransactionsService`

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,16 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures{
+        buildConfig true
+    }
+
     buildTypes {
+        debug{
+            buildConfigField "String", "BASE_URL", "\"https://gist.githubusercontent.com/Josh-Ng/500f2716604dc1e8e2a3c6d31ad01830/raw/4d73acaa7caa1167676445c922835554c5572e82\""
+        }
         release {
+            buildConfigField "String", "BASE_URL", "\"https://gist.githubusercontent.com/Josh-Ng/500f2716604dc1e8e2a3c6d31ad01830/raw/4d73acaa7caa1167676445c922835554c5572e82\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
