--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,7 +16,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Transactions"
         tools:targetApi="31"
-        android:appComponentFactory="nz.co.test.transactions.di.DaggerAppComponentFactory"
         tools:replace="android:appComponentFactory">
 
         <activity
