--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,11 @@ android {
 
 dependencies {
 
+    def navigation_version = "2.7.7"
+
+    implementation "androidx.navigation:navigation-fragment-ktx:${navigation_version}"
+    implementation "androidx.navigation:navigation-ui-ktx:${navigation_version}"
+
     def dagger_version = '2.51.1'
 
     implementation "com.google.dagger:dagger:${dagger_version}"
