--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,10 @@ android {
 
     buildTypes {
         debug{
-            buildConfigField "String", "BASE_URL", "\"https://gist.githubusercontent.com/Josh-Ng/500f2716604dc1e8e2a3c6d31ad01830/raw/4d73acaa7caa1167676445c922835554c5572e82\""
+            buildConfigField "String", "BASE_URL", "\"https://gist.githubusercontent.com/Josh-Ng/500f2716604dc1e8e2a3c6d31ad01830/raw/4d73acaa7caa1167676445c922835554c5572e82/\""
         }
         release {
-            buildConfigField "String", "BASE_URL", "\"https://gist.githubusercontent.com/Josh-Ng/500f2716604dc1e8e2a3c6d31ad01830/raw/4d73acaa7caa1167676445c922835554c5572e82\""
+            buildConfigField "String", "BASE_URL", "\"https://gist.githubusercontent.com/Josh-Ng/500f2716604dc1e8e2a3c6d31ad01830/raw/4d73acaa7caa1167676445c922835554c5572e82/\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -52,20 +52,13 @@ android {
 }
 
 dependencies {
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 
     def navigation_version = "2.7.7"
 
     implementation "androidx.navigation:navigation-fragment-ktx:${navigation_version}"
     implementation "androidx.navigation:navigation-ui-ktx:${navigation_version}"
 
-    def dagger_version = '2.51.1'
-
-    implementation "com.google.dagger:dagger:${dagger_version}"
-    kapt "com.google.dagger:dagger-compiler:${dagger_version}"
-
-    implementation "com.google.dagger:dagger-android:${dagger_version}"
-    implementation "com.google.dagger:dagger-android-support:${dagger_version}"
-    kapt "com.google.dagger:dagger-android-processor:${dagger_version}"
 
     def kotlin_version = '2.0.0'
 
@@ -80,7 +73,7 @@ dependencies {
 
     def retrofit_version = '2.11.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -89,4 +82,9 @@ dependencies {
     def hiltVersion = "2.48"
     implementation "com.google.dagger:hilt-android:$hiltVersion"
     kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
